--- a/Cleo/i18n/dialogue-event-en.json
+++ b/Cleo/i18n/dialogue-event-en.json
@@ -20,6 +20,6 @@
     ],
     "Soggins_Infinite": "Who gave you that USB?",
     "Soggins_Missile_Shout_1": "I told you not to plug that USB in!",
-    "SogginsEscapeIntent_1": "Stay right there.",
+    "SogginsEscapeIntent_1": "Don't forget who saved you!",
     "SogginsEscape_1": "That's not an option."
 }
