--- a/Cleo/i18n/dialogue-event-en.json
+++ b/Cleo/i18n/dialogue-event-en.json
@@ -2,7 +2,7 @@
     "GrandmaShop": "Do you have any Red Velvet cake?",
     "LoseCharacterCard": "Oh. Well would you look at that.",
     "LoseCharacterCard_{{CharacterType}}": [ "Could have been worse!" ],
-    "CrystallizedFriendEvent": "Just drop me off at the next scrapyard",
+    "CrystallizedFriendEvent": "Just drop me off at the next repair yard.",
     "CrystallizedFriendEvent_{{CharacterType}}": [ "Back to business." ],
     "ShopKeepBattleInsult": "Oh, so this is how it feels.",
     "ChoiceCardRewardOfYourColorChoice_{{CharacterType}}": [
